# bibfmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/betterbib/: __init__.py  tools.py
src/bibfmt/: __init__.py  adapt_doi_urls.py  errors.py  journal_abbrev.py  tools.py  warnings.py
src/bibfmt/cli/: __init__.py  _format.py  _main.py  helpers.py
src/bibfmt/data/: csv-to-json.py
tests/: test_bibtex_title.py  test_to_string.py  test_tools.py
tests/cli/: test_format_cli.py
tools/: bibitems2bibtex.py
