[project]
name = "bibfmt"
version = "4.2.0"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "BibTeX formatter"
urls.Code = "https://github.com/flying-sheep/bibfmt"
urls.Issues = "https://github.com/flying-sheep/bibfmt/issues"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
keywords =["latex", "bibtex"]
dependencies = [
    "pybtex >=0.19.0",
    "pylatexenc",
    "requests",
    "requests_cache",
    "rich >=9.4.0",
    "unidecode",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-codeblocks >= 0.12.2",
    "pytest-cov",
]

[project.scripts]
bibfmt = "bibfmt.cli:main"

[tool.hatch.envs.default]
features = ["test"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]
